--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="0; URL=/2026">
-<link rel="canonical" href="/2026">
+<meta http-equiv="refresh" content="0; URL=conference/2026">
+<link rel="canonical" href="conference/2026">
